1999-12-07  H . J . Lu  hjl@valinux.com

	* readelf.c: Fix compile time warnings.  Support more than 999
	symbols.

1999-12-03  Nick Clifton  <nickc@cygnus.com>

	* readelf.c (enum print_mode): New type.
	(print_vma): New function.
	(dump_relocations): Use print_vma to display bfd_vma values.
	(process_file_header): Use print_vma to display bfd_vma values.
	(process_program_headers): Use print_vma to display bfd_vma values.
	(process_section_headers): Use print_vma to display bfd_vma values.
	(dynamic_segment_parisc_val): Use print_vma to display bfd_vma values.
	(process_dynamic_segment): Use print_vma to display bfd_vma values.
	(process_symbol_table): Use print_vma to display bfd_vma values.
	(process_mips_specific): Use print_vma to display bfd_vma values.

1999-11-25  Fred Fish  <fnf@cygnus.com>

	* readelf.c (process_note): Change arg from Elf_External_Note
	to Elf32_Internal_Note, which also turns the function body
	into little more than a call to printf.
	(process_corefile_note_segment):  Substantially rewritten
	to properly handle case where target and host are different
	endianness, handle note sections with padding, and add some
	cruft to handle notes with unterminated name data.

1999-11-22  Nick Clifton  <nickc@cygnus.com>

	* objcopy.c (copy_usage): Reformat.
	(strip_usage): Reformat.

1999-11-21  Nick Clifton  <nickc@cygnus.com>

	* objdump.c (usage): Overhaul output:  One line per switch.
	Textual description of each switch.  Distinguish between
	optional switches and required switches.
	(long_options): Add 'g', 'G' and 'z' short options.
	(main): Distinguish between optional switches and required
	switches.

	* binutils.texi: Add -g -G and -z short options for
	--debugging, --stabs and --disassemble-zeroes.

1999-11-03  Nick Clifton  <nickc@cygnus.com>

	* dlltool.c (flush_page): Clip short values to prevent warnings
	from the assembler.
	Change default mcore machine name to 'mcore-le' and rename
	big-endian version to 'mcore-be'. 
